<resources>
    <string name="app_name">EMSTrack</string>
    <string name="app_version" translatable="false">0_9_19</string>
    <string name="client_name" translatable="false">AndroidClient</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="alert_error_title">Error</string>
    <string name="alert_warning_title">Warning</string>
    <string name="alert_ambulance_switch">Stop \'%1$s\' from sending updates first.</string>
    <string name="message_please_wait">Please wait…</string>
    <string name="logout_confirm">Are you sure that you want to logout?</string>
    <string name="appNeedsVersionUpdate">You are running an older version of the app. Please update before continuing!</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_remember_user_text">Remember user</string>
    <string name="login_button_text">Login</string>
    <string name="error_empty_username">Please provide a valid user name.</string>
    <string name="error_empty_password">Please provide a valid password.</string>
    <string name="error_invalid_credentials">Please provide valid credentials.</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_no_hospitals">No hospitals are associated with this account.</string>
    <string name="error_invalid_server">Please select server.</string>
    <string name="equipment_boolean_image">Checkbox</string>
    <string name="equipment_boolean_button_positive_text">Update</string>
    <string name="equipment_boolean_button_negative_text">Cancel</string>
    <string name="equipment_boolean_message">Is this equipment available?</string>
    <string name="equipment_boolean_true">Available</string>
    <string name="equipment_boolean_false">Not available</string>
    <string name="equipment_integer_text">Value</string>
    <string name="equipment_integer_button_positive_text">Update</string>
    <string name="equipment_integer_button_negative_text">Cancel</string>
    <string name="equipment_integer_message">How many units are available?</string>
    <string name="equipment_string_text">Text</string>
    <string name="equipment_string_button_positive_text">Update</string>
    <string name="equipment_string_button_negative_text">Cancel</string>
    <string name="equipment_string_message">Value</string>
    <string name="action_settings">Settings</string>
    <string name="location_settings_inadequate_warning">The current settings on the device are not adequate to run this sample. Fix in Settings.</string>
    <string name="permission_rationale">Location permission is needed for core functionality.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="dispatch">Dispatch</string>
    <string name="hospital">Hospital</string>
    <string name="gps">GPS</string>
    <string name="unknown">unknown</string>
    <string name="callLabel">Calls:</string>
    <string name="gps_startTrackingSwitchText">Start tracking:</string>
    <string name="gpsLocationLabel">Location:</string>
    <string name="gpsLatitudeLabel">Latitude:</string>
    <string name="gpsLongitudeLabel">Longitude:</string>
    <string name="gpsTimestampLabel">Timestamp:</string>
    <string name="gpsOrientationLabel">Orientation:</string>
    <string name="degrees">deg</string>
    <string name="ambulanceStatusLabel">Status:</string>
    <string name="gpsIdentifierLabel">Identifier:</string>
    <string name="ambulanceCapabilityLabel">Capability:</string>
    <string name="callNotesLabel">Notes:</string>
    <string name="gpsLastUpdatedOnLabel">Last update:</string>
    <string name="gpsCommentsLabel">Comments:</string>
    <string name="failedToConnectToBroker">Failed to connected to broker.</string>
    <string name="Exception">Exception:</string>
    <string name="loginSuccessMessage">User \'%1$s\' successfully logged in.</string>
    <string name="couldNotLoginUser">Could not login user \'%1$s\'</string>
    <string name="invalidAmbulanceId">Invalid vehicle id.</string>
    <string name="couldNotParseAmbulance">Could not parse vehicle update.</string>
    <string name="couldNotSubscribeToAmbulance">Could not subscribe to vehicle.</string>
    <string name="couldNotSubscribeToHospital">Could not subscribe to hospital.</string>
    <string name="couldNotRetrieveAmbulance">Could not retrieve vehicle \'%1$s\'.</string>
    <string name="couldNotRetrieveHospitals">Could not retrieve hospitals.</string>
    <string name="couldNotUpdateAmbulanceOnServer">Could not update vehicle on server.</string>
    <string name="failedToDisconnectFromBroker">Failed to disconnect from broker.</string>
    <string name="couldNotLogout">Could not logout.</string>
    <string name="couldNotRetrieveAmbulances">Could not retrieve vehicles.</string>
    <string name="couldNotUnsubscribeToAmbulances">Could not unsubscribe to vehicles.</string>
    <string name="cantModifyAmbulance">You do not have permission to modify this vehicle.</string>
    <string name="anotherClientIsStreamingLocations">Another client is currently streaming updates.</string>
    <string name="startedStreamingLocation">Started streaming updates.</string>
    <string name="couldNotStartLocationUpdates">Could not start sending updates to server. This probably means another user is logged in on the same vehicle.</string>
    <string name="forcingLocationUpdates">Forcing updates…</string>
    <string name="anotherClientRequestedLocations">Another client requested to stream updates.</string>
    <string name="requestingToStreamLocation">Requesting to stream updates.</string>
    <string name="EMSTrack" translatable="false">EMSTrack</string>
    <string name="couldNotProcessBuffer">Could not process entire buffer, %1$d messages left.</string>
    <string name="localBufferIsEmpty">Server is online, local buffer is empty.</string>
    <string name="serverIsOfflineBufferingUpdate">Server is offline. Buffering updates.</string>
    <string name="cannotUseLocationServices">Application cannot use location services. Please modify permissions on Settings.</string>
    <string name="noAmbulanceSelected">No vehicle is currently selected.</string>
    <string name="inadequateLocationSettings">Location settings are inadequate, and cannot be fixed here.</string>
    <string name="failedToStartLocationUpdates">Failed to start sending updates.</string>
    <string name="anotherClientReporting">Another client is currently reporting updates.</string>
    <string name="succeededForcingLocationUpdates">Success! Will attempt to start sending updates.</string>
    <string name="couldNotForceLocationUpdate">Could not force updates.</string>
    <string name="serverIsNotOnlineMessages">Server is not online, %1$d message(s) in the buffer.</string>
    <string name="attemptingToReconnect">Attempting to reconnect to server.</string>
    <string name="serverIsBackOnline">Server is back online.</string>
    <string name="failedToReconnect">Failed to reconnect to server.</string>
    <string name="couldNotLogin">Could not login user \'%1$s\'.</string>
    <string name="pleaseLogin">Please login.</string>
    <string name="welcomeUser">Welcome %1$s.</string>
    <string name="restartText">Restart.</string>
    <string name="couldNotStartService">Could not start foreground service.</string>
    <string name="serverError">Server error: %1$s.</string>
    <string name="stopText">Stop.</string>
    <string name="stoppedStreamingLocation">Stopped streaming updates.</string>
    <string name="about">About:</string>
    <string name="failedToAddGeofence">Failed to add geofence.</string>
    <string name="failedToRemoveGeofence">Failed to remove geofence.</string>
    <string name="couldNotSubscribeToCalls">Could not subscribe to calls.</string>
    <string name="couldNotParseCall">Could not parse call.</string>
    <string name="couldNotSubscribeToStatuses">Could not subscribe to statuses.</string>
    <string name="couldNotParseStatus">Could not parse status.</string>
    <string name="couldNotPublish">Could not publish to %1$s.</string>
    <string name="couldNotSubscribe">Could not subscribe to %1$s.</string>
    <string name="couldNotFindAmbulance">Could not find vehicle.</string>
    <string name="couldNotParseCallData">Could not parse call data.</string>
    <string name="couldNotDeclineCall">Cannot decline call. Currently serving another call.</string>
    <string name="willNotProcessNextCall">Will not process next call. Currently serving call.</string>
    <string name="cannotSetCallAccepted">Can\'t set call as accepted: already servicing call</string>
    <string name="requestToStreamLocation">Requesting to stream updates…</string>
    <string name="selectAmbulance">Select vehicle:</string>
    <string name="skip">Skip</string>
    <string name="detailsLabel">Details:</string>
    <string name="numberOfWaypoints">Number of waypoints:</string>
    <string name="enterUsername">Enter username</string>
    <string name="enterPassword">Enter password</string>
    <string name="signIn">Sign In</string>
    <string name="ambulance">Vehicle</string>
    <string name="map">Map</string>
    <string name="hospitals">Hospitals</string>
    <string name="endCall">End Call</string>
    <string name="radio_code_label">Radio Code:</string>
    <string name="noCallNotesAvailable">No notes yet</string>
    <string name="addCallNote">New note</string>
    <string name="call">Call</string>
    <string name="video_call">Video call</string>
    <string name="login_as_demo">Demo</string>
    <string name="tracking">Tracking</string>
    <string name="panic">Panic</string>
    <string name="versionKey" translatable="false">version</string>
    <string name="useApproximateLocationAccuracyPreferenceKey" translatable="false">use_approximate_location_accuracy</string>
    <string name="aboutLabel">About</string>
    <string name="version">Version</string>
    <string name="approximateLocation">Approximate location</string>
    <string name="approximateLocationExplanation">Use coarse location while vehicle is not in a call to save battery.</string>
    <string name="ambulances">Vehicles</string>
    <string name="navigationAppPreferenceKey" translatable="false">navigation_app_key</string>
    <string name="navigationAppPreferenceLabel">Navigation app</string>
    <string name="navigationAppPreferenceSummary">Choice of external navigation app</string>
    <string name="navigationAppPreferenceDefault" translatable="false">google_maps</string>
    <string name="numberOfPatientsLabel">Number of patients:</string>
    <string name="numberOfMessagesLabel">Number of messages:</string>
    <string name="distanceToNextWaypoint">Distance to next waypoint:</string>
    <string name="online">online</string>
    <string name="app_credits">The following open source projects were used to build this app:</string>
    <string name="app_credits_icons">Icons:</string>
    <string name="app_credits_servers">Our servers are powered by:</string>
    <string name="credits">Credits:</string>
    <string name="build_date">Build date:</string>
    <string name="build_version">Build version:</string>
    <string name="open_source" translatable="false">- <a href="https://square.github.io/retrofit">Retrofit</a>\n- <a href="https://www.eclipse.org/paho">Eclipse Paho</a></string>
    <string name="open_source_icons" translatable="false">- <a href="https://fontawesome.com">FontAwesome</a></string>
    <string name="open_source_servers" translatable="false">- <a href="https://www.djangoproject.com">Django</a>\n- <a href="https://mosquitto.org">Eclipse Mosquitto</a>\n- <a href="https://www.postgresql.org">PostgreSQL</a></string>
</resources>