<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:icon="@drawable/ic_map"
        android:key="@string/navigationAppPreferenceKey"
        android:title="@string/navigationAppPreferenceLabel"
        android:summary="@string/navigationAppPreferenceSummary"
        android:entries="@array/navigationAppEntries"
        android:entryValues="@array/navigationAppValues"
        android:defaultValue="@string/navigationAppPreferenceDefault"/>

    <SwitchPreference
        android:icon="@drawable/ic_location_arrow"
        android:key="@string/useApproximateLocationAccuracyPreferenceKey"
        android:title="@string/approximateLocation"
        android:summary="@string/approximateLocationExplanation"
        android:defaultValue="true" />

    <Preference
        android:icon="@drawable/ic_info_circle"
        android:key="@string/versionKey"
        android:title="@string/aboutLabel"
        android:summary="@string/version" />

</PreferenceScreen>