<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_globe"
        android:title="@string/map" />

    <item
        android:id="@+id/hospitalsFragment"
        android:icon="@drawable/ic_hospital"
        android:title="@string/hospitals" />

    <item
        android:id="@+id/ambulancesFragment"
        android:icon="@drawable/ic_cars_solid"
        android:title="@string/ambulances" />

    <item
        android:id="@+id/ambulanceFragment"
        android:icon="@drawable/ic_car_solid"
        android:title="@string/ambulance" />

    <item
        android:id="@+id/callFragment"
        android:icon="@drawable/ic_phone_solid"
        android:title="@string/call" />

</menu>