<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/trackingIcon"
        android:title="@string/tracking"
        app:showAsAction="always"
        android:icon="@drawable/ic_shipping_fast" />

    <item
        android:id="@+id/onlineIcon"
        android:title="@string/online"
        app:showAsAction="always"
        android:icon="@drawable/ic_wifi" />

    <item
        android:id="@+id/videoCallButton"
        android:title="@string/video_call"
        app:showAsAction="always"
        android:icon="@drawable/ic_video_call" />

    <item
        android:id="@+id/panicButton"
        android:title="@string/panic"
        app:showAsAction="always"
        android:icon="@drawable/ic_exclamation_triangle" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_cog_solid" />

</menu>