<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:windowBackground"
    android:id="@+id/activity_gps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.emstrack.ambulance.fragments.StatusFragment">

    <TextView
        android:id="@+id/latitudeLabel"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:text="Latitude:"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/latitudeText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/unknown"
        android:layout_toRightOf="@+id/latitudeLabel"/>

    <TextView
        android:id="@+id/longitudeLabel"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:text="@string/gpsLongitudeLabel"
        android:layout_below="@+id/latitudeLabel"/>

    <TextView
        android:id="@+id/longitudeText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/unknown"
        android:layout_toRightOf="@+id/longitudeLabel"
        android:layout_below="@+id/latitudeText"/>

    <TextView
        android:id="@+id/orientationLabel"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:text="@string/gpsOrientationLabel"
        android:layout_below="@+id/longitudeLabel"/>

    <TextView
        android:id="@+id/orientationText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/unknown"
        android:layout_toRightOf="@+id/orientationLabel"
        android:layout_below="@+id/longitudeText"/>
    
    <TextView
        android:id="@+id/timestampLabel"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:text="@string/gpsTimestampLabel"
        android:layout_below="@+id/orientationLabel"/>

    <TextView
        android:id="@+id/timestampText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/unknown"
        android:layout_toRightOf="@+id/timestampLabel"
        android:layout_below="@+id/orientationText"/>

    <Switch
        android:id="@+id/startTrackingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
        android:text="@string/gps_startTrackingSwitchText"
        android:layout_below="@+id/timestampLabel"/>

</RelativeLayout>


