<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/call_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/callSkipLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/callSkipWaypointButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bootstrapSecondary"
            android:text="@string/skip" />

        <Button
            android:id="@+id/callVisitingWaypointButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bootstrapPrimary"
            android:text="@string/markAsVisiting" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/callEndLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/callAddWaypointButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bootstrapSuccess"
            android:text="@string/addWaypoint" />

        <Button
            android:id="@+id/callEndButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/endCall" />

    </LinearLayout>

    <TextView
        android:id="@+id/callNotesLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/callNotesLabel"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/callNotesText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/noCallNotesAvailable"
        android:scrollbars = "vertical" />

    <Button
        android:id="@+id/addCallNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="0dp"
        android:backgroundTint="@color/bootstrapPrimary"
        android:text="@string/addCallNote" />

</LinearLayout>